Fixes event show contact info layout breakage.

--- a/app/styles/components/event-info.less
+++ b/app/styles/components/event-info.less
@@ -59,5 +59,11 @@
   height: 34px;
   margin: 0;
   padding: 5px 8px;
-  width: 188px;
+  width: 170px;
+  @media (max-width: @screen-md-max) {
+    width: 135px;
+  }
+  @media (max-width: @screen-sm-max) {
+    width: 85px;
+  }
 }
